# controllers/events.js
@@ -1,19 +1,29 @@
 const { Event } = require("../models/models");
 
 const getSingleEventById = async (req, res) => {
+   // #swagger.tags = ['Event']
+   //  #swagger.summary = 'Gets a single Event'
+   //    #swagger.description = 'Get a single event by using the id of the event'
+   // #swagger.operationId = 'use the id of the event'
+   // #swagger.ignore = false
   res.json(res.event);
 };
 
 const getAllEvents = async (req, res) => {
+   // #swagger.tags = ['Attendance']
+
   try {
     const allEvents = await Event.find();
     res.status(200).json(allEvents);
   } catch (error) {
+    
     res.status(500).json({ message: error.message });
   }
 };
 
 const createEvent = async (req, res) => {
+   // #swagger.tags = ['Attendance']
+
   Event.validate(req.body)
     .then((validatedData) => {
       // The document passed validation
@@ -30,6 +40,8 @@ const createEvent = async (req, res) => {
 };
 
 const deleteEvent = async (req, res) => {
+   // #swagger.tags = ['Attendance']
+
   try {
     await Event.findByIdAndDelete(res.event._id);
 
@@ -39,6 +51,7 @@ const deleteEvent = async (req, res) => {
   }
 };
 const updateEvent = async (req, res) => {
+   // #swagger.tags = ['Attendance']
   
  
   try {
